# ocr-engine

./: .gitignore  README.md  main.py  ocr_engine.py  pyproject.toml  render.yaml  requirements.txt
